﻿This file includes only a short list of the changes between Media Player Classic - BE's versions.

English translation of the change log made by u_shell.

Legend:
+ Added
* Changed
! Fixed

1.2.1.0
==============================

Added (+):

Changes (*):
	* MediaInfo 0.7.64+ svn rev.5892;
	* Little-CMS 2.5 git-4eb01404;
	* ffmpeg 2.0 git-88909bec;
	* libwebp 0.3.1 git-bef7e9cc;
	* libpng 1.7.0 b17 git-bb065520;
	* libopus 1.1 git-03e82037;

Fixes (!):


1.2.0.3
==============================

Added (+):
	+ SPEEX decoder (Speex Audio);
	+ MPC Audio Renderer - completely rewritten, now it fully supports WASAPI Exclusive/Shared modes. Uses event mode for rendering. Added internal volume control. Sound mute is also possible for Bitstream;
	+ MPC Video Decoder: dynamic video stream / aspect ratio / frame size changing during playback is supported now;
	+ MP4Splitter - Speex (Speex Audio) support;
	+ MPEGSplitter - added (improved) support for Blu-ray with Seamless branching;
	+ G2M video decoder (Go2Webinar);
	+ LCDShader by JanWillem32;
	+ XSPF (XML Shareable Playlist Format) support;
	+ VMware Video ('VMnc') support;
	+ Handling playlists (multiplaylist) from YouTube.com;
	+ Opening and saving links from Vimeo.com;
	+ Ability to set paths (templates) for automatic audio tracks loading;
	+ Support for AAC stream playback in ShoutCastSource;
	+ Support for description tag in ShoutCastSource;
	+ Support for DVB subtitles in .wtv (Windows Media Center TV File);
	+ MPEG-1/MPEG-2 software decoders based on ffmpeg;
	+ Full support for Apple's MPEG2 in MP4/MOV Splitter ;
	+ Parsing TrueHD in MPEGSplitter;
	+ VC1-I decoding without DXVA;
	+ Ability to open the file open dialog for adding files from the playlist;
	+ Forced one-window mode;
	+ Filter priority management system - choosing filters for specific file formats;