@@ -13,12 +13,13 @@ Legend:
 Added (+):
 
 Changes (*):
-	* MediaInfo 0.7.64+ svn rev.5892;
+	* MediaInfo 0.7.64+ svn rev.5896;
 	* Little-CMS 2.5 git-4eb01404;
 	* ffmpeg 2.0 git-88909bec;
 	* libwebp 0.3.1 git-bef7e9cc;
 	* libpng 1.7.0 b17 git-bb065520;
 	* libopus 1.1 git-03e82037;
+	* ZenLib 0.4.29+ svn rev.445;
 
 Fixes (!):
 
